--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "bootstrap-icons": "^1.13.1",
+        "build": "^0.1.4",
         "sweetalert2": "^11.22.4"
     }
 }
